--- a/mass-transit/MttBackend/src/MttBackend/MttBackend.csproj
+++ b/mass-transit/MttBackend/src/MttBackend/MttBackend.csproj
@@ -14,5 +14,14 @@
         <PackageReference Include="Amazon.Lambda.Core" Version="2.2.0"/>
         <PackageReference Include="Amazon.Lambda.Serialization.SystemTextJson" Version="2.4.0"/>
         <PackageReference Include="Amazon.Lambda.SQSEvents" Version="2.0.0" />
+        <PackageReference Include="AWSSDK.SecretsManager.Caching" Version="1.0.6" />
+        <PackageReference Include="MassTransit" Version="8.1.2" />
+        <PackageReference Include="MassTransit.AmazonSQS" Version="8.1.2" />
+        <PackageReference Include="MassTransit.Marten" Version="8.1.2" />
+        <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="6.0.1" />
+        <PackageReference Include="Microsoft.Extensions.Http" Version="6.0.0" />
+    </ItemGroup>
+    <ItemGroup>
+      <ProjectReference Include="..\..\..\MttApplication\MttApplication.csproj" />
     </ItemGroup>
 </Project>
