--- a/mass-transit/MttApi/src/MttApi/MttApi.csproj
+++ b/mass-transit/MttApi/src/MttApi/MttApi.csproj
@@ -16,6 +16,8 @@
         <PackageReference Include="AWSSDK.SecretsManager.Caching" Version="1.0.6" />
         <PackageReference Include="MassTransit" Version="8.1.2" />
         <PackageReference Include="MassTransit.AmazonSQS" Version="8.1.2" />
+        <PackageReference Include="OpenTelemetry.Exporter.Console" Version="1.9.0" />
+        <PackageReference Include="OpenTelemetry.Extensions.Hosting" Version="1.9.0" />
         <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
     </ItemGroup>
     <ItemGroup>
